--- a/.env.example
+++ b/.env.example
@@ -8,12 +8,21 @@ LOG_CHANNEL=stack
 LOG_DEPRECATIONS_CHANNEL=null
 LOG_LEVEL=debug
 
+# Local
 DB_CONNECTION=pgsql
 DB_HOST=127.0.0.1
 DB_PORT=5432
 DB_DATABASE=portal
 DB_USERNAME=postgres
 DB_PASSWORD=
+
+# SE Suite
+DB_CONNECTION_SQLSRV=sqlsrv
+DB_HOST_SQLSRV=67.211.218.7
+DB_PORT_SQLSRV=1433
+DB_DATABASE_SQLSRV=sesuite-test
+DB_USERNAME_SQLSRV=sesuite-createc
+DB_PASSWORD_SQLSRV=s3su1te!Cr34tec
 
 BROADCAST_DRIVER=log
 CACHE_DRIVER=file
