soap client added

--- a/.env.example
+++ b/.env.example
@@ -68,3 +68,6 @@ VITE_PUSHER_APP_CLUSTER="${PUSHER_APP_CLUSTER}"
 
 PASSPORT_PERSONAL_ACCESS_CLIENT_ID=
 PASSPORT_PERSONAL_ACCESS_CLIENT_SECRET=
+
+SOAP_SERVER=
+SOAP_TOKEN=
