.env.example updated

--- a/.env.example
+++ b/.env.example
@@ -2,7 +2,10 @@ APP_NAME=Portal
 APP_ENV=local
 APP_KEY=
 APP_DEBUG=false
-APP_URL=http://localhost
+APP_URL=http://localhost:3000
+
+SESSION_DOMAIN=localhost
+SANCTUM_STATEFUL_DOMAINS=localhost
 
 LOG_CHANNEL=stack
 LOG_DEPRECATIONS_CHANNEL=null
@@ -17,12 +20,12 @@ DB_USERNAME=postgres
 DB_PASSWORD=
 
 # SE Suite
-DB_CONNECTION_SQLSRV=sqlsrv
-DB_HOST_SQLSRV=67.211.218.7
-DB_PORT_SQLSRV=1433
-DB_DATABASE_SQLSRV=sesuite-test
-DB_USERNAME_SQLSRV=sesuite-createc
-DB_PASSWORD_SQLSRV=s3su1te!Cr34tec
+DB_CONNECTION_SQLSRV=
+DB_HOST_SQLSRV=
+DB_PORT_SQLSRV=
+DB_DATABASE_SQLSRV=
+DB_USERNAME_SQLSRV=
+DB_PASSWORD_SQLSRV=
 
 BROADCAST_DRIVER=log
 CACHE_DRIVER=file
@@ -65,9 +68,6 @@ VITE_PUSHER_HOST="${PUSHER_HOST}"
 VITE_PUSHER_PORT="${PUSHER_PORT}"
 VITE_PUSHER_SCHEME="${PUSHER_SCHEME}"
 VITE_PUSHER_APP_CLUSTER="${PUSHER_APP_CLUSTER}"
-
-PASSPORT_PERSONAL_ACCESS_CLIENT_ID=
-PASSPORT_PERSONAL_ACCESS_CLIENT_SECRET=
 
 SOAP_SERVER=
 SOAP_TOKEN=
