--- a/.env.example
+++ b/.env.example
@@ -2,7 +2,8 @@ APP_NAME=Portal
 APP_ENV=local
 APP_KEY=
 APP_DEBUG=false
-APP_URL=http://localhost:3000
+APP_URL=http://localhost:8000
+FRONTEND_URL=http://localhost:3000
 
 SESSION_DOMAIN=localhost
 SANCTUM_STATEFUL_DOMAINS=localhost
